ui/tui/src/snapshots/hub_tui__display__tests__snapshot_build_cats_empty.snap
---
source: ui/tui/src/display.rs
expression: "build_cats(vec![])"
---
[
    CatData {
        cat: Errors,
        items: [],
    },
    CatData {
        cat: Prs,
        items: [],
    },
    CatData {
        cat: Issues,
        items: [],
    },
]
