ui/tui/src/snapshots/hub_tui__display__tests__snapshot_build_cats_mixed_urgency.snap
---
source: ui/tui/src/display.rs
expression: "build_cats(vec![ci_critical, pr_low, issue()])"
---
[
    CatData {
        cat: Errors,
        items: [
            Single(
                Ci(
                    CiFailure {
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        workflow_name: "Deploy",
                        conclusion: "failure",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Critical,
                        url: "https://github.com/owner/repo/actions/runs/3",
                    },
                ),
            ),
        ],
    },
    CatData {
        cat: Prs,
        items: [
            Single(
                Pr(
                    PullRequest {
                        number: 1,
                        title: "Docs",
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        url: "https://github.com/owner/repo/pull/1",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Low,
                    },
                ),
            ),
        ],
    },
    CatData {
        cat: Issues,
        items: [
            Single(
                Issue(
                    Issue {
                        number: 7,
                        title: "Fix bug",
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        url: "https://github.com/owner/repo/issues/7",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Low,
                        labels: [],
                    },
                ),
            ),
        ],
    },
]
