ui/tui/src/snapshots/hub_tui__display__tests__snapshot_build_cats_multiple_per_category.snap
---
source: ui/tui/src/display.rs
expression: "build_cats(vec![pr(), pr2, issue(), ci(), ci2])"
---
[
    CatData {
        cat: Errors,
        items: [
            Single(
                Ci(
                    CiFailure {
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        workflow_name: "CI",
                        conclusion: "failure",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: High,
                        url: "https://github.com/owner/repo/actions/runs/1",
                    },
                ),
            ),
            Single(
                Ci(
                    CiFailure {
                        repo: RepoSlug(
                            "owner/other",
                        ),
                        workflow_name: "Lint",
                        conclusion: "failure",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Low,
                        url: "https://github.com/owner/other/actions/runs/2",
                    },
                ),
            ),
        ],
    },
    CatData {
        cat: Prs,
        items: [
            Single(
                Pr(
                    PullRequest {
                        number: 42,
                        title: "Add feature",
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        url: "https://github.com/owner/repo/pull/42",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Medium,
                    },
                ),
            ),
            Single(
                Pr(
                    PullRequest {
                        number: 99,
                        title: "Another PR",
                        repo: RepoSlug(
                            "owner/other",
                        ),
                        url: "https://github.com/owner/other/pull/99",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: High,
                    },
                ),
            ),
        ],
    },
    CatData {
        cat: Issues,
        items: [
            Single(
                Issue(
                    Issue {
                        number: 7,
                        title: "Fix bug",
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        url: "https://github.com/owner/repo/issues/7",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Low,
                        labels: [],
                    },
                ),
            ),
        ],
    },
]
