ui/tui/src/snapshots/hub_tui__display__tests__snapshot_build_cats_one_of_each_type.snap
---
source: ui/tui/src/display.rs
expression: "build_cats(vec![pr(), issue(), ci(), linear()])"
---
[
    CatData {
        cat: Errors,
        items: [
            Single(
                Ci(
                    CiFailure {
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        workflow_name: "CI",
                        conclusion: "failure",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: High,
                        url: "https://github.com/owner/repo/actions/runs/1",
                    },
                ),
            ),
        ],
    },
    CatData {
        cat: Prs,
        items: [
            Single(
                Pr(
                    PullRequest {
                        number: 42,
                        title: "Add feature",
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        url: "https://github.com/owner/repo/pull/42",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Medium,
                    },
                ),
            ),
        ],
    },
    CatData {
        cat: Issues,
        items: [
            Single(
                Issue(
                    Issue {
                        number: 7,
                        title: "Fix bug",
                        repo: RepoSlug(
                            "owner/repo",
                        ),
                        url: "https://github.com/owner/repo/issues/7",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Low,
                        labels: [],
                    },
                ),
            ),
            Single(
                Linear(
                    LinearIssue {
                        identifier: "ENG-99",
                        title: "Do the thing",
                        url: "https://linear.app/eng/issue/ENG-99",
                        state: "In Progress",
                        age: TimeDelta {
                            secs: 0,
                            nanos: 0,
                        },
                        urgency: Medium,
                    },
                ),
            ),
        ],
    },
]
