ui/tui/src/snapshots/hub_tui__display__tests__snapshot_item_lines.snap
---
source: ui/tui/src/display.rs
expression: lines
---
pr_no_reviews:         Add feature #42 · ooloth · no reviews
pr_approved:           Add feature #42 · ooloth · 2 approvals
pr_changes_requested:  Add feature #42 · ooloth · changes requested
pr_draft:              Add feature #42 · ooloth · draft
pr_conflict:           Add feature #42 · ooloth · no reviews · conflict
pr_draft_conflict:     Add feature #42 · ooloth · draft · conflict
issue:       Fix bug #7
issue_labels:Fix bug #8 · bug, wontfix
ci_bare:     failed
ci_job_step: Build / cargo check · failed
ci_full:     Build / cargo check · error[E0308]: mismatched types
linear:      Do the thing (ENG-99)
loki:        MemoryError · OOM killed
gcp:         errors · something broke
group_3:     MemoryError · OOM killed (3)
