ui/tui/src/snapshots/hub_tui__display__tests__snapshot_item_lines_private.snap
---
source: ui/tui/src/display.rs
expression: lines
---
media_blocked:  Import blocked · Invalid video file
media_missing:  Not found · Show — S01E02 · aired 2024-01-01
media_health:   Indexer unavailable
